# mullvadvpn-app

./: CHANGELOG.md  Cargo.toml  build-apk.sh
.github/workflows/: android-app.yml  desktop-e2e.yml  gradle-verification.yml
android/: build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/baselineprofile/: build.gradle.kts
android/gradle/: libs.versions.toml  verification-metadata.keys.xml  verification-metadata.xml
building/: container-run.sh
desktop/: package-lock.json  package.json  tsconfig.json
docs/: tour.md-newer
installer-downloader/: Cargo.toml
ios/: Snapfile
ios/Assets/: changes.txt
ios/Configurations/: StoreKitTest.storekit
ios/MullvadSettings/: TunnelSettingsV6.swift  TunnelSettingsV7.swift
ios/MullvadVPN/: AppDelegate.swift
ios/MullvadVPN.xcodeproj/: project.pbxproj
ios/Operations/: ResultOperation.swift
mullvad-api/: Cargo.toml
mullvad-api/src/: availability.rs  https_client_with_sni.rs  lib.rs  rest.rs  version.rs
mullvad-cli/src/: main.rs
mullvad-daemon/: Cargo.toml
mullvad-daemon/src/: account_history.rs  api.rs  custom_list.rs  lib.rs  logging.rs  main.rs  management_interface.rs  target_state.rs  tunnel.rs  version_check.rs
mullvad-encrypted-dns-proxy/: Cargo.toml
mullvad-encrypted-dns-proxy/src/: config_resolver.rs
mullvad-paths/: Cargo.toml
mullvad-paths/src/: cache.rs  settings.rs
mullvad-relay-selector/: Cargo.toml
mullvad-types/: Cargo.toml
mullvad-version/: build.rs
talpid-core/: Cargo.toml
talpid-wireguard/: Cargo.toml
test/: Cargo.toml
(+106 files in other folders)
