[package]
name = "mullvad-encrypted-dns-proxy"
description = "A port forwarding proxy that retrieves its configuration from a AAAA record over DoH"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = [ "macros" ] }
log = { workspace = true }
hickory-resolver = { workspace = true, features = [ "dns-over-https-rustls" ]}
serde = { workspace = true, features = ["derive"] }
webpki-roots = "0.26"
rustls = "0.23"
rustls-pki-types = "1.10"

[dev-dependencies]
env_logger = { workspace = true }
